--- a/style.css
+++ b/style.css
@@ -80,3 +80,27 @@ background-repeat: no-repeat;
     background-color: mediumblue;
     color: white;
 }
+
+
+.content-1 {
+    position: relative;
+    top: 150px;
+    left: 560px;
+    width: 20%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    background-color: steelblue;
+}
+
+.content-2 {
+    position: relative;
+    top: 50px;
+    left: 950px;
+    width: 24%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    background-color: steelblue;
+
+}
