--- a/style.css
+++ b/style.css
@@ -86,12 +86,16 @@ background-repeat: no-repeat;
     color: white;
 }
 
-
-.content-1 {
+.columns {
+    margin: 0 auto;
     position: relative;
-    top: 150px;
-    left: 550px;
-    width: 20%;
+    top:175px;
+    left: 30px;
+    width: 850px;
+}
+.content-1 {
+   float: left;
+    width: 328px;
     height: 100px;
     display: flex;
     flex-direction: column;
@@ -99,10 +103,8 @@ background-repeat: no-repeat;
     }
 
 .content-2 {
-    position: relative;
-    top: 50px;
-    left: 955px;
-    width: 24%;
+    float: right;
+    width: 512px;
     height: 100px;
     display: flex;
     flex-direction: column;
